# hyperlimit

./: Cargo.toml  PERFORMANCE.md  README.md  benchmarks.md  dispatch_trace.md  plots.md
benches/: benchmark_report.rs  dispatch_trace.rs  predicates.rs
doc/predicate-plots/: manifest.txt
examples/: predicate_plots.rs  write_benchmarks_md.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: predicate_invariants.rs
src/: batch.rs  classify.rs  error.rs  filter.rs  lib.rs  orient.rs  plane.rs  predicate.rs  provenance.rs  real.rs  resolve.rs  scalar.rs  session.rs  trace.rs
src/backend/: approx.rs  geogram.rs  hyperlattice.rs  hyperreal.rs  interval.rs  mod.rs  realistic_blas.rs  robust.rs
src/geometry/: facts.rs  homogeneous.rs  mod.rs  plane.rs  point.rs
src/predicates/: aabb.rs  convex.rs  coplanar.rs  distance.rs  dop.rs  exact.rs  filters.rs  halfspace.rs  incircle.rs  insphere.rs  interval.rs  mod.rs  nd.rs  order.rs  orient.rs  point_line.rs  point_plane.rs  ring.rs  segment.rs  segment_plane.rs  triangle.rs  triangle_triangle.rs
tests/: adversarial_degeneracies.rs  adversarial_predicates.rs  adversarial_props.rs  batch.rs  halfspace_feasibility.rs  nd_predicates.rs  promoted_mesh_helpers.rs  robust_parity.rs  support_dop.rs
