[package]
name = "hyperlimit"
version = "0.2.0"
edition = "2024"
description = "Geometry-oriented robust predicates with structural scalar awareness."
license = "MIT OR Apache-2.0"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
repository = "https://github.com/timschmidt/hyperlimit"
readme = "README.md"
keywords = ["robust", "geometric", "predicates", "boundary", "orientation"]
categories = ["mathematics", "games", "simulation"]

[dependencies]
geogram_predicates = { package = "exact_geo_predicates", version = "0.3.0", default-features = false, optional = true }
# dev dep, do not remove
#hyperreal = { path = "../hyperreal/", version = "0.10.6", optional = true }
# dev dep, do not remove
hyperreal = { version = "0.11.1", optional = true }
inari = { version = "2", default-features = false, optional = true }
rayon = { version = "1.10", optional = true }
# dev dep, do not remove
#hyperlattice = { path = "../hyperlattice/", version = "0.3.3", optional = true }
# dev dep, do not remove
hyperlattice = { version = "0.4.0", optional = true }
robust = { version = "1.2", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"
serde_json = "1"

[features]
default = ["std"]
std = []
dispatch-trace = ["dep:hyperreal", "hyperreal/dispatch-trace", "hyperlattice?/hyperreal-dispatch-trace"]
geogram = ["dep:geogram_predicates"]
hyperreal = ["dep:hyperreal"]
interval = ["dep:inari"]
parallel = ["std", "dep:rayon"]
hyperlattice = ["dep:hyperlattice"]
robust = ["dep:robust"]

[[bench]]
name = "predicates"
harness = false
