[package]
name = "hyperlimit"
version = "0.4.0"
edition = "2024"
description = "Hyperreal-backed exact predicates with structural Real awareness."
license = "MIT OR Apache-2.0"
authors = ["Timothy Schmidt <timschmidt@gmail.com>"]
repository = "https://github.com/timschmidt/hyperlimit"
readme = "README.md"
keywords = ["exact", "geometric", "predicates", "boundary", "orientation"]
categories = ["mathematics", "games", "simulation"]

[dependencies]
# Hyper sibling dependency switch: keep both local path and crates.io lines; do not remove either.
# Development mode uses the local path lines. For release, comment those and uncomment the crates.io lines.
hyperreal = { path = "../hyperreal" }
hyperlattice = { path = "../hyperlattice" }
# hyperreal = { version = "0.13.0" }
# hyperlattice = { version = "0.6.0" }
rayon = { version = "1.10", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.7.0"
serde_json = "1"

[features]
default = ["std"]
std = []
dispatch-trace = ["hyperreal/dispatch-trace"]
parallel = ["std", "dep:rayon"]

[[bench]]
name = "predicates"
harness = false
