[package]
name = "hyperlimit-fuzz"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

# Keep fuzz dependencies out of the parent workspace graph during normal builds.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
# Hyper sibling dependency switch: keep both local path and crates.io lines; do not remove either.
# Development mode uses the local path lines. For release, comment those and uncomment the crates.io lines.
hyperlimit = { path = "..", default-features = false, features = ["std", "parallel"] }
hyperreal = { path = "../../hyperreal" }
# hyperlimit = { version = "0.4.0", default-features = false, features = ["std", "parallel"] }
# hyperreal = "0.13.0"

[[bin]]
name = "predicate_invariants"
path = "fuzz_targets/predicate_invariants.rs"
test = false
doc = false
